--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 							<li><a href="mailto:paul@paulcrp.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2025 Paul Crăpătureanu</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2025 Paul Crăpătureanu</li>
 						</ul>
 					</footer>
 
