--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 				margin-bottom: 1rem;
 			}
 			
+			.game-card p {
+				color: var(--primary-color) !important;
+			}
+			
 			.coming-soon {
 				background-color: var(--dark-grey) !important;
 				cursor: not-allowed !important;
@@ -212,7 +216,7 @@
 							<li><a href="mailto:paul@paulcrp.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2025 Paul Crăpătureanu</li>
+							<li>&copy; 2024 Paul Crăpătureanu</li>
 						</ul>
 					</footer>
 
