--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://x.com/PopPopAliens" class="button fit primary" target="_blank">Follow on X</a></li>
-								<li><a href="mailto:paul@paulcrp.com" class="button fit">Send Email</a></li>
+								<li><a href="https://instagram.com/paul_crp" class="button fit primary" target="_blank">Follow on Instagram</a></li>
 							</ul>
 						</div>
 					</section>
@@ -317,7 +317,7 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="https://x.com/PopPopAliens" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-							<li><a href="mailto:paul@paulcrp.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://instagram.com/paul_crp" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; 2025 Paul Crăpătureanu</li>
