--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 								</div>
 								<div class="content game-card">
 									<h3>NeuraRush</h3>
-									<p>Brain Boost Games - Mind-bending puzzle adventure that challenges your cognitive abilities and pushes your mental limits.</p>
+									<p>Brain Boost Games - 15 Brain-Boosting Mini Games that challenge your cognitive abilities, train memory, reflexes and problem-solving abilities.</p>
 									<a href="https://apps.apple.com/app/neurarush-brain-boost-games/id6746837300" target="_blank">
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
@@ -239,7 +239,7 @@
 								</div>
 								<div class="content game-card">
 									<h3>Cyphre</h3>
-									<p>Puzzle Ring Challenge - Cryptographic mind games that test your problem-solving skills and logical thinking abilities.</p>
+									<p>Puzzle Ring Challenge - Think. Align. Unlock. Addictive symbol decoder that challenges your brain.</p>
 									<a href="https://apps.apple.com/app/cyphre-puzzle-ring-challenge/id6748257455" target="_blank">
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
