--- a/poppopaliens_privacypolicy.html
+++ b/poppopaliens_privacypolicy.html
@@ -166,6 +166,40 @@
 
 			<p>We may also collect information that Your browser sends whenever You visit our Service or when You access the Service by or through a mobile device.</p>
 
+			<h2>Third-Party Services and Advertising</h2>
+
+			<h3>Google AdMob</h3>
+			<p>Our Service uses Google AdMob, an advertising service provided by Google Inc. AdMob may use cookies and other tracking technologies to serve advertisements based on your interests and previous visits to our Service and other websites.</p>
+
+			<p>Google AdMob may collect and use the following information:</p>
+			<ul>
+				<li>Device information (such as device model, operating system version, and unique device identifiers)</li>
+				<li>Location information (approximate location derived from IP address)</li>
+				<li>Usage data and interaction with advertisements</li>
+				<li>Advertising identifiers (such as Google Advertising ID on Android or IDFA on iOS)</li>
+				<li>Information about apps installed on your device</li>
+			</ul>
+
+			<p>You can opt out of personalized advertising by:</p>
+			<ul>
+				<li><strong>Android devices:</strong> Go to Settings > Google > Ads > Opt out of Ads Personalization</li>
+				<li><strong>iOS devices:</strong> Go to Settings > Privacy & Security > Apple Advertising > Personalized Ads (turn off)</li>
+				<li><strong>Web browsers:</strong> Visit <a href="https://www.google.com/settings/ads" target="_blank">Google Ads Settings</a></li>
+			</ul>
+
+			<p>For more information about Google's privacy practices, please visit the <a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a>.</p>
+
+			<h3>Analytics and Crash Reporting</h3>
+			<p>We may use third-party services to analyze app usage and diagnose technical issues. These services may collect information such as:</p>
+			<ul>
+				<li>App usage statistics</li>
+				<li>Device performance data</li>
+				<li>Crash reports and error logs</li>
+				<li>Session duration and frequency of use</li>
+			</ul>
+
+			<p>This information is used solely to improve our Service and fix technical issues. No personally identifiable information is included in these reports.</p>
+
 			<h2>Use of Your Personal Data</h2>
 			<p>The Company may use Personal Data for the following purposes:</p>
 
@@ -183,7 +217,8 @@
 			<p>We may share Your personal information in the following situations:</p>
 
 			<ul>
-				<li><strong>With Service Providers</strong>: We may share Your personal information with Service Providers to monitor and analyze the use of our Service, to contact You.</li>
+				<li><strong>With Service Providers</strong>: We may share Your personal information with Service Providers to monitor and analyze the use of our Service, to contact You, and to serve advertisements through our Service.</li>
+				<li><strong>With Advertising Partners</strong>: We may share certain non-personal information with advertising partners, including Google AdMob, to serve relevant advertisements. This may include device identifiers, usage patterns, and demographic information, but does not include personally identifiable information such as your name or email address.</li>
 				<li><strong>For business transfers</strong>: We may share or transfer Your personal information in connection with, or during negotiations of, any merger, sale of Company assets, financing, or acquisition of all or a portion of Our business to another company.</li>
 				<li><strong>With Affiliates</strong>: We may share Your information with Our affiliates, in which case we will require those affiliates to honor this Privacy Policy. Affiliates include Our parent company and any other subsidiaries, joint venture partners or other companies that We control or that are under common control with Us.</li>
 				<li><strong>With business partners</strong>: We may share Your information with Our business partners to offer You certain products, services or promotions.</li>
@@ -191,19 +226,36 @@
 				<li><strong>With Your consent</strong>: We may disclose Your personal information for any other purpose with Your consent.</li>
 			</ul>
 
-			<h2>Retention of Your Personal Data</h2>
+			<h2>Your Privacy Rights and Choices</h2>
+			<p>You have certain rights regarding your personal data:</p>
+
+			<ul>
+				<li><strong>Access and Portability</strong>: You can request access to the personal data we have collected about you.</li>
+				<li><strong>Correction</strong>: You can request that we correct any inaccurate personal data.</li>
+				<li><strong>Deletion</strong>: You can request that we delete your personal data, subject to certain legal limitations.</li>
+				<li><strong>Advertising Preferences</strong>: You can opt out of personalized advertising as described in the Google AdMob section above.</li>
+				<li><strong>Data Processing Objection</strong>: You can object to certain types of data processing.</li>
+			</ul>
+
+			<p>To exercise any of these rights, please contact us using the information provided in the "Contact Us" section.</p>
+
+			<h2>Data Retention</h2>
 			<p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies.</p>
 
 			<p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
 
-			<h2>Transfer of Your Personal Data</h2>
+			<p><strong>Advertising Data:</strong> Data collected by Google AdMob and other advertising partners is retained according to their respective privacy policies and retention schedules. You can learn more about Google's data retention practices in their <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a>.</p>
+
+			<h2>International Data Transfers</h2>
 			<p>Your information, including Personal Data, is processed at the Company's operating offices and in any other places where the parties involved in the processing are located. It means that this information may be transferred to — and maintained on — computers located outside of Your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from Your jurisdiction.</p>
 
 			<p>Your consent to this Privacy Policy followed by Your submission of such information represents Your agreement to that transfer.</p>
 
 			<p>The Company will take all steps reasonably necessary to ensure that Your data is treated securely and in accordance with this Privacy Policy and no transfer of Your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of Your data and other personal information.</p>
 
-			<h2>Delete Your Personal Data</h2>
+			<p><strong>Google Services:</strong> When using Google AdMob and other Google services, your data may be transferred to and processed by Google in the United States and other countries where Google operates. Google adheres to applicable data protection frameworks and provides appropriate safeguards for international data transfers.</p>
+
+			<h2>Manage Your Personal Data</h2>
 			<p>You have the right to delete or request that We assist in deleting the Personal Data that We have collected about You.</p>
 
 			<p>Our Service may give You the ability to delete certain information about You from within the Service.</p>
