--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Paul Crăpătureanu</h2>
-							<p>Independent Game Developer<br />
+							<p>Independent Game Developer<br /><br />
 							Creating engaging mobile experiences<br />
 							that challenge your mind and reflexes.</p>
 							<ul class="actions special">
