--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
 				margin-top: 1.5rem !important;
 			}
 			
+			/* Move the "View My Games" button down */
+			#banner .actions.special {
+				margin-top: 2rem !important;
+			}
+			
 			/* Mobile-specific line spacing fix */
 			@media (max-width: 768px) {
 				#banner .inner p {
@@ -193,6 +198,11 @@
 				
 				.banner-description {
 					margin-top: 2rem !important;
+				}
+				
+				/* More spacing for button on mobile */
+				#banner .actions.special {
+					margin-top: 2.5rem !important;
 				}
 			}
 		</style>
