--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
 							<ul class="actions stacked">
 								<li><a href="https://x.com/PopPopAliens" class="button fit primary" target="_blank">Follow on X</a></li>
 								<li><a href="https://instagram.com/paul_crp" class="button fit primary" target="_blank">Follow on Instagram</a></li>
+								<li><a href="mailto:devpaulcrp@gmail.com" class="button fit primary">Send Email</a></li>
 							</ul>
 						</div>
 					</section>
@@ -363,6 +364,7 @@
 						<ul class="icons">
 							<li><a href="https://x.com/PopPopAliens" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://instagram.com/paul_crp" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:devpaulcrp@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; 2025 Paul Crăpătureanu</li>
