--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 							<li><a href="mailto:devpaulcrp@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2025 Paul Crăpătureanu</li>
+							<li>&copy; 2025 Paul Crp</li>
 						</ul>
 					</footer>
 
