--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 						<ul class="icons">
 							<li><a href="https://x.com/PopPopAliens" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://instagram.com/paul_crp" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-							<li><a href="mailto:devpaulcrp@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:devpaulcrp@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; 2025 Paul Crp</li>
