--- a/index.html
+++ b/index.html
@@ -303,6 +303,19 @@
 									</a>
 								</div>
 							</section>
+							
+							<section class="spotlight">
+								<div class="image">
+									<img src="images/poppoppiggies-icon.png" alt="Pop Pop Piggies App Icon" class="app-icon">
+								</div>
+								<div class="content game-card">
+									<h3>Pop Pop Piggies</h3>
+									<p>Arcade Hunter - Whack-a-piggie mayhem with tricky decoys and lightning-fast action. Test your reflexes and avoid the sneaky impostors!</p>
+									<a href="https://apps.apple.com/app/pop-pop-piggies-arcade-hunter/id6748965914" target="_blank">
+										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
+									</a>
+								</div>
+							</section>
 						</div>
 					</section>
 
@@ -315,11 +328,6 @@
 								and engaging mechanics that keep players coming back for more.</p>
 							</header>
 							<ul class="features">
-								<li class="icon solid fa-gamepad">
-									<h3>Pop Pop Piggies</h3>
-									<p>Whack-a-piggie with clever decoys and progressive difficulty. Test your reflexes and avoid the traps!</p>
-									<a href="#" class="button small coming-soon" onclick="return false;">Coming Soon</a>
-								</li>
 								<li class="icon solid fa-puzzle-piece">
 									<h3>Future Projects</h3>
 									<p>More exciting games are in the pipeline. Each one designed to push the boundaries of mobile gaming.</p>
@@ -339,6 +347,10 @@
 								<li class="icon fa-rocket">
 									<h3>Innovation</h3>
 									<p>Constantly exploring new game mechanics and technologies to create unique experiences.</p>
+								</li>
+								<li class="icon solid fa-gamepad">
+									<h3>Quality First</h3>
+									<p>Each release is thoroughly tested and polished to deliver the best possible gaming experience.</p>
 								</li>
 							</ul>
 						</div>
