--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 				margin-bottom: 1rem;
 				font-size: 1.5rem;
 				letter-spacing: -0.02em;
+				text-transform: none !important;
 			}
 			
 			.game-card p {
