--- a/bouncyfruits_privacypolicy.html
+++ b/bouncyfruits_privacypolicy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Privacy Policy - Pop Pop Fruits: Tap Frenzy</title>
+		<title>Privacy Policy - Bouncy Fruits Tpa Smash Frenzy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<style>
@@ -110,7 +110,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Privacy Policy for Pop Pop Fruits: Tap Frenzy</h1>
+			<h1>Privacy Policy for Bouncy Fruits: Tap Frenzy</h1>
 			<p class="last-updated">Last updated: July 20, 2025</p>
 
 			<p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
@@ -129,9 +129,9 @@
 
 			<p><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</p>
 
-			<p><strong>Application</strong> refers to Pop Pop Fruits: Tap Frenzy, the software program provided by the Company.</p>
+			<p><strong>Application</strong> refers to Bouncy Fruits: Tap Frenzy, the software program provided by the Company.</p>
 
-			<p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Pop Pop Fruits: Tap Frenzy.</p>
+			<p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Bouncy Fruits: Tap Frenzy.</p>
 
 			<p><strong>Country</strong> refers to: Romania</p>
 
