--- a/bouncyfruits_privacypolicy.html
+++ b/bouncyfruits_privacypolicy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Privacy Policy - Bouncy Fruits Tpa Smash Frenzy</title>
+		<title>Privacy Policy - Bouncy Fruits Tap Smash Frenzy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<style>
@@ -110,7 +110,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Privacy Policy for Bouncy Fruits: Tap Frenzy</h1>
+			<h1>Privacy Policy for Bouncy Fruits Tap Smash Frenzy</h1>
 			<p class="last-updated">Last updated: July 20, 2025</p>
 
 			<p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
