--- a/index.html
+++ b/index.html
@@ -317,6 +317,17 @@
 									</a>
 								</div>
 							</section>
+							
+							<section class="spotlight">
+								<div class="image">
+									<img src="images/bouncyfruits-icon.png" alt="Bouncy Fruits App Icon" class="app-icon">
+								</div>
+								<div class="content game-card">
+									<h3>Bouncy Fruits</h3>
+									<p>Trampoline Smasher - Smash the bouncing fruits while avoiding tricky vegetable decoys! Master combos, use shields, and level up through stunning visuals and immersive audio.</p>
+									<a href="#" class="button primary coming-soon">Coming Soon</a>
+								</div>
+							</section>
 						</div>
 					</section>
 
