--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paul Crăpătureanu - Game Developer</title>
+		<title>Paul Crăpătureanu - App Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -237,7 +237,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Paul Crăpătureanu</h2>
-							<p class="banner-text">Independent Game Developer</p>
+							<p class="banner-text">Independent App Developer</p>
 							<p class="banner-text banner-description">Creating engaging mobile experiences<br />
 							that challenge your mind and reflexes.</p>
 							<ul class="actions special">
@@ -373,7 +373,7 @@
 						<div class="inner">
 							<header>
 								<h2>Get in Touch</h2>
-								<p>Follow my game development journey and connect with the gaming community.</p>
+								<p>Follow my app development journey.</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://x.com/PopPopAliens" class="button fit primary" target="_blank">Follow on X</a></li>
@@ -408,3 +408,4 @@
 
 	</body>
 </html>
+
