--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 								</div>
 								<div class="content game-card">
 									<h3>Bouncy Fruits</h3>
-									<p>Trampoline Smasher - Smash the bouncing fruits while avoiding tricky vegetable decoys! Master combos, use shields, and level up through stunning visuals and immersive audio.</p>
+									<p>Smash the bouncing fruits while avoiding tricky decoys! Master combos, use shields, and level up through stunning visuals and immersive audio.</p>
 									<a href="#" class="button primary coming-soon">Coming Soon</a>
 								</div>
 							</section>
@@ -408,4 +408,5 @@
 
 	</body>
 </html>
+
 
