--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paul Crăpătureanu - App Developer</title>
+								<title>Paul Crăpătureanu - App Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -325,7 +325,9 @@
 								<div class="content game-card">
 									<h3>Bouncy Fruits</h3>
 									<p>Smash the bouncing fruits while avoiding tricky decoys! Master combos, use shields, and level up through stunning visuals and immersive audio.</p>
-									<a href="#" class="button primary coming-soon">Coming Soon</a>
+									<a href="https://apps.apple.com/app/bouncy-fruits-tap-smash-frenzy/id6751171271" target="_blank">
+										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
+									</a>
 								</div>
 							</section>
 						</div>
@@ -408,5 +410,3 @@
 
 	</body>
 </html>
-
-
