--- a/proscanpdf_privacypolicy.html
+++ b/proscanpdf_privacypolicy.html
@@ -13,7 +13,7 @@
 			}
 			
 			body {
-				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
+				font-family: 'SF Pro Rounded', -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
 				line-height: 1.6;
 				color: white;
 				background-color: #0A1E3F;
@@ -316,6 +316,7 @@
 
 			<ul>
 				<li><strong>Local Processing:</strong> Document content is processed locally, reducing exposure risks</li>
+				<li><strong>iCloud Security:</strong> When iCloud Documents sync is enabled, documents benefit from Apple's end-to-end encryption and security measures</li>
 				<li><strong>Encryption:</strong> Data transmitted to our servers is encrypted in transit</li>
 				<li><strong>Access Controls:</strong> Limited access to personal data within our organization</li>
 				<li><strong>Regular Security Updates:</strong> We regularly update our security measures</li>
